--- a/src/app/components/user/reservar/tab-reservar/tab-reservar/tab-reservar.component.css
+++ b/src/app/components/user/reservar/tab-reservar/tab-reservar/tab-reservar.component.css
@@ -14,3 +14,15 @@
     font-size: 10px;
     gap: 0.5rem;
 }
+
+
+/* Desktop and Tablet */
+@media (min-width:600px) {
+	.available-hours-container p {
+		font-size: 14px;
+	}
+	
+	.consideraciones-container div {
+		font-size: 14px;
+	}
+}
