--- a/src/app/components/admin/admin-people-card/admin-people-card.component.html
+++ b/src/app/components/admin/admin-people-card/admin-people-card.component.html
@@ -1,18 +1,8 @@
 <!DOCTYPE html>
 
-<div class="container customContainer">
-    <div class="row">
-
-        <div class="cardContentLeft">
-            <h5>Porcentaje de ocupación actual</h5>
-            <h3>70%</h3>
-            <p>Aforo perteneciente a las instalaciones del Wellness Center, Campus Monterrey. </p>
-        </div>
-
-        <div class="cardContentRig">
-            <img src="../../../../assets/images/exercise2.png" alt="exercise">
-        </div>
-        
-    </div>
-
+<div class="container">  
+    <button (click)="getData()" class="btn btn-dark">
+        <span nz-icon nzType="download" nzTheme="outline"></span>
+        Descargar reporte
+    </button>
 </div>
