--- a/src/app/pages/admin/panelAdmin/panelAdmin.component.html
+++ b/src/app/pages/admin/panelAdmin/panelAdmin.component.html
@@ -19,54 +19,19 @@
                 </div>
                 <div class="col-md-6">
                     <div class="text-end">
-                        <app-admin-people-card></app-admin-people-card>      
+                        <app-export-button></app-export-button>
                     </div>
                 </div>
             </div>
             <hr class="solid mr-3 ">
     
-            <div class="custom-container">
-                    <div class="row customRow">
-                
-                        <div class="customColumn">
-                            <p>Porcentaje de aforo: 
-                                <span nz-icon nzType="smile" nzTheme="outline"></span>
-                            </p>
-                            <h2>65%</h2>
-                            <h5 class="upper">Aumento del 20% con respecto a la última hora</h5>
-                        </div>
-                        
-                        <div class="customColumn">
-                            <p>Total de personas: 
-                                <span nz-icon nzType="user-add" nzTheme="outline"></span>
-                            </p>
-                            <h2>165</h2>
-                            <h5 class="upper">Aumento del 20% con respecto a la última hora</h5>
-                        </div>
-
-                        <div class="customColumn">
-                            <p >Reservaciones hoy:
-                                <span nz-icon nzType="schedule" nzTheme="outline"></span>
-                            </p>
-                            <h2>26</h2>
-                            <h5 class="lower">Decremento del 35% con respecto al último dia</h5>
-                        </div>
-    
-                        <div class="customColumn">
-                            <p>Visitas del sitio hoy: 
-                                <span nz-icon nzType="usergroup-delete" nzTheme="outline"></span>
-                            </p>
-                            <h2>3500</h2>
-                            <h5 class="upper">Aumento del 200% con respecto a la última hora</h5>
-                        </div>
-                        
-                    </div>
-            </div>
+            <app-admin-people-card></app-admin-people-card>  
 
                 
-                <div class="row customColumn" style="margin-left: 20px;">
+                <div class="row customColumn">
 
                     <div class="sectionOne cardContainer" >
+                        <h3>Aforo semanal</h3>
                         <app-admin-charts></app-admin-charts>      
                     </div>
                     
