Real time stats works

--- a/src/app/components/admin/admin-people-card/admin-people-card.component.html
+++ b/src/app/components/admin/admin-people-card/admin-people-card.component.html
@@ -7,7 +7,7 @@
             <p>Porcentaje de aforo: 
                 <span nz-icon nzType="smile" nzTheme="outline"></span>
             </p>
-            <h2>65%</h2>
+            <h2 id="porcentaje"></h2>
             <h5 class="upper">Aumento del 20% con respecto a la última hora</h5>
         </div>
         
@@ -15,7 +15,7 @@
             <p>Total de personas: 
                 <span nz-icon nzType="user-add" nzTheme="outline"></span>
             </p>
-            <h2>165</h2>
+            <h2 id="aforoActual"></h2>
             <h5 class="upper">Aumento del 20% con respecto a la última hora</h5>
         </div>
 
