--- a/src/app/components/user/home/stats/stats.component.html
+++ b/src/app/components/user/home/stats/stats.component.html
@@ -17,7 +17,8 @@
           </div>
 
         </slide>
-        <slide>
+        <!-- New statistic to add -->
+        <!-- <slide>
 
           <div class="text-center py-5 w-75 mx-auto">
             <h2>Third custom content</h2>
@@ -27,7 +28,7 @@
             </div>
           </div>
           
-        </slide>
+        </slide> -->
       </carousel>
 
 </div>
