--- a/src/app/components/user/reservar/card-deporte/card-deporte.component.html
+++ b/src/app/components/user/reservar/card-deporte/card-deporte.component.html
@@ -1,5 +1,5 @@
 <div class="card text-white my-2 rounded-3 border-0">
-  <img src="{{baseURL+imagen}}" class="card-img rounded-3" alt="...">
+  <img ngSrc="{{baseURL+imagen}}" class="card-img rounded-3" alt="..." width="169" height="100">
   <div class="card-img-overlay d-flex align-items-center justify-content-center fondo text-white rounded-3">
     <h4 class="text-white text-center">{{name}}</h4>
   </div>
