--- a/src/app/components/user/reservar/modal-confirm-reservation/modal-confirm-reservation.component.html
+++ b/src/app/components/user/reservar/modal-confirm-reservation/modal-confirm-reservation.component.html
@@ -1,5 +1,6 @@
 <app-alerts *ngIf="reservationCreatedAlertValues.message" [reservationCreatedAlertValues]="reservationCreatedAlertValues"></app-alerts>
 <button
+	data-cy="reservation-slot"
 	style="
 		margin: 5px;
 		padding: 15px 0 35px 0;
