--- a/src/app/components/user/reservar/card-deporte/card-deporte.component.css
+++ b/src/app/components/user/reservar/card-deporte/card-deporte.component.css
@@ -14,13 +14,15 @@
     background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5));
 }
 img{
-    height: 100px;   
+    height: 100px;
+    width:auto;   
 }
 
  /* Tablet */
  @media (min-width:600px) {
     img{
         height: 168px;   
+        width:auto;  
     }
  }
 
@@ -28,6 +30,7 @@ img{
  @media (min-width:900px) {
     img {
       height: 230px;
+      width:auto;  
     }
 
   }
