--- a/src/app/components/user/reservar/tab-lugar/puntos-importantes/puntos-importantes.component.html
+++ b/src/app/components/user/reservar/tab-lugar/puntos-importantes/puntos-importantes.component.html
@@ -20,7 +20,7 @@
         </nz-list>
     </div>
 </div> -->
-
+<!-- Boton que abre pop up de puntos importantes -->
 <button nz-button (click)="info()" class="border border-0">
     <span nz-icon nzType="info-circle" nzTheme="outline"></span>
 </button>
