--- a/src/app/components/user/home/stats/stats.component.html
+++ b/src/app/components/user/home/stats/stats.component.html
@@ -1,25 +1,25 @@
 <div class="container-sm text-center stats my-2 p-0 d-block">
+  <!-- Carrusel que despliega estadísticas -->
+  <carousel class="carousel-dark h-100 d-block" [interval]="0">
+
+    <!-- Aforo Actual -->
+    <slide>
+      <div class="text-center w-80 mx-auto mt-5 aforo">
+        <app-aforo-actual></app-aforo-actual>
+        <h5 class="mt-5 aforo-texto">Aforo actual del gimnasio</h5>
+      </div>
+    </slide>
     
-    <carousel  class="carousel-dark h-100 d-block" [interval]="0">
-        <slide >
+    <!-- Aforo semanal -->
+    <slide class="h-100">
+      <div class="aforo-semanal-container text-center py-3 w-75 mx-auto">
+        <app-admin-charts></app-admin-charts>
+        <h5 class="aforo-semanal-texto mt-5">Aforo semanal del gimnasio</h5>
+      </div>
+    </slide>
 
-          <div class="text-center w-80 mx-auto mt-5 aforo">
-             <app-aforo-actual></app-aforo-actual>
-            <h5 class="mt-5 aforo-texto">Aforo actual del gimnasio</h5>
-          </div>
-
-        </slide>
-        <slide class="h-100">
-
-          <div class="aforo-semanal-container text-center py-3 w-75 mx-auto">
-            <app-admin-charts></app-admin-charts>
-            <h5 class="aforo-semanal-texto mt-5">Aforo semanal del gimnasio</h5>
-          </div>
-
-        </slide>
-        <!-- New statistic to add -->
-        <!-- <slide>
-
+    <!-- New statistic to add -->
+    <!-- <slide>
           <div class="text-center py-5 w-75 mx-auto">
             <h2>Third custom content</h2>
             <div class="lead">
@@ -27,8 +27,7 @@
               <p>Nulla vitae elit libero, a pharetra augue mollis interdum. </p>
             </div>
           </div>
-          
         </slide> -->
-      </carousel>
+  </carousel>
 
 </div>
