--- a/src/app/pages/user/reservar-menu/reservar-menu.component.html
+++ b/src/app/pages/user/reservar-menu/reservar-menu.component.html
@@ -1,21 +1,30 @@
 
 <div class="mt-3">
+    <!-- Búsqueda por deporte -->
     <nz-input-group [nzSuffix]="suffixIconSearch" class="rounded-3 text-center p-2">
-        <input type="text" nz-input placeholder="¿Buscas algo?" />
+        <input 
+        type="text" nz-input 
+        placeholder="¿Buscas algo?"
+        #search 
+        (keyup)="Filtrar(search.value)" 
+        />
     </nz-input-group>
     <ng-template #suffixIconSearch>
         <span nz-icon nzType="search"></span>
     </ng-template>
+    
+    <!-- Contenedor de deportes -->
     <div class="container px-0">
         <div class="row justify-content-between mt-3">
-            <div class="col-6" *ngFor="let deporte of newData" >
+
+            <div class="col-6" *ngFor="let deporte of filteredDeportes" >
+                <!-- Deporte -->
                 <a [routerLink]="['./', deporte.deporte_id]">
                     <app-card-deporte [name]='deporte.name' [imagen]="deporte.imagen"></app-card-deporte>
                 </a>
+
             </div>
         </div>
     </div>
       
 </div>
-
-<!-- "{{'../../../../assets/'+imagen}} -->
