Remove search bar

--- a/src/app/components/admin/modal-edit-espacio/modal-edit-espacio.component.html
+++ b/src/app/components/admin/modal-edit-espacio/modal-edit-espacio.component.html
@@ -10,7 +10,7 @@
                     <input formControlName="code" type="text" class="form-control" placeholder="Codigo" />
                 </div>
                 <div class="col col-sm-12">
-                    <app-select-deporte (listOfSelectedDeportes)="addList($event, 'deporte')"></app-select-deporte>
+                    <!-- <app-select-deporte (listOfSelectedDeportes)="addList($event, 'deporte')"></app-select-deporte> -->
                 </div>
 
                 <div class="col col-sm-12">
@@ -18,7 +18,7 @@
                 </div>
 
                 <div class="col col-sm-12">
-                    <app-select-punto-importante (listOfSelectedPuntos)="addList($event, 'punto')"></app-select-punto-importante>
+                    <!-- <app-select-punto-importante (listOfSelectedPuntos)="addList($event, 'punto')"></app-select-punto-importante> -->
                 </div>
 
                 <div class="col col-sm-9">
