--- a/src/app/components/user/reservar/tab-lugar/ubicacion/ubicacion.component.html
+++ b/src/app/components/user/reservar/tab-lugar/ubicacion/ubicacion.component.html
@@ -3,8 +3,7 @@
       nzDescription="Ubicación"
     >
       <nz-list-item-meta-title>
-
-        <a href={{url}}>
+        <a href={{url}} target="_blank">
             <div class="d-flex justify-content-between align-items-end">
                 Ver en Google Maps
                 <img 
