--- a/src/app/pages/admin/torneos/torneos.component.html
+++ b/src/app/pages/admin/torneos/torneos.component.html
@@ -45,8 +45,7 @@
         </div>
         <div class="col-sm-6">
             <div class="row">
-                <div class="col-sm-8"> <input type="search" class="form-control" id="searchQuery"
-                        placeholder="Search...">
+                <div class="col-sm-8"> 
                 </div>
                 <div class="col-sm-4">
                     <button id="add-button" class="btn btn-primary" type="button" (click)="showModal()">
