--- a/src/app/components/admin/card-anuncio/card-anuncio.component.html
+++ b/src/app/components/admin/card-anuncio/card-anuncio.component.html
@@ -5,7 +5,7 @@
     <div class="content-container">
         <h2>{{name}}</h2>
         <p>{{description}}</p>
-            <app-modal-delete size="small" [id_object]="anuncio_id" type_object="anuncio"
+            <app-modal-delete size="small" [id_object]="aviso_id" type_object="anuncio"
             name_object={{name}}></app-modal-delete>
 
             <a href={{url}} target="_blank"><span class="redirect" nz-icon nzType="link" nzTheme="outline"></span></a>
