Bug fix aviso_id

--- a/src/app/pages/admin/anuncios/anuncios.component.html
+++ b/src/app/pages/admin/anuncios/anuncios.component.html
@@ -43,7 +43,7 @@
     </div>
     <div class="anuncios-container row">
         <div class="col" *ngFor="let anuncio of arrAnuncios">
-            <app-card-anuncio [anuncio_id]="anuncio.anuncio_id"[name]="anuncio.name" [imagen]="anuncio.imagen"
+            <app-card-anuncio [aviso_id]="anuncio.aviso_id"[name]="anuncio.name" [imagen]="anuncio.imagen"
                 [description]="anuncio.description"></app-card-anuncio>
         </div>
     </div>
