reservation table works!

--- a/src/app/pages/admin/panelAdmin/panelAdmin.component.html
+++ b/src/app/pages/admin/panelAdmin/panelAdmin.component.html
@@ -37,45 +37,7 @@
                     
                     <div class="sectionTwo cardContainer">
                        <h3>Reservaciones recientes </h3>
-                       <div class="container">
-                        <div class="row tableContainer"> 
-
-                            <table >
-                                <tr>
-                                  <td>
-                                    <div class="imageContainer">
-                                        <img
-                                        src="https://api.dicebear.com/6.x/initials/svg?seed=AS"
-                                        alt="avatar" />
-                                     
-                                    </div>
-                                  </td>
-                                  <td>
-                                    <div class="textContainer">
-                                        <div class="upText">
-                                            <h4>
-                                                Alexis Cardona 
-                                            </h4>
-                                        </div>
-                                        <div class="downText">
-                                            <h5>
-                                               a00831284@tec.mx
-                                            </h5>
-                                        </div>
-                                    </div>
-                                  </td>
-                                  <td>
-                                    <div class="buttonContainer">
-                                            <h5>
-                                                12:00pm - 13:00pm                                      
-                                            </h5>
-                                    </div>
-                                  </td>
-                                </tr>
-                              </table>
-
-                        </div>
-                       </div>
+                        <app-reservation-table></app-reservation-table>
                     </div>            
                 </div>
         
