--- a/src/app/pages/user/reservar-deporte/reservar-deporte.component.css
+++ b/src/app/pages/user/reservar-deporte/reservar-deporte.component.css
@@ -4,7 +4,8 @@
 }
 img{
     height: 280px;
-    background-size: auto;   
+    background-size: auto;
+    object-fit:cover;   
 }
 
 :host ::ng-deep .ant-tabs-tab-btn{
