--- a/src/app/components/user/home/reservaciones/reservaciones.component.html
+++ b/src/app/components/user/home/reservaciones/reservaciones.component.html
@@ -1,3 +1,4 @@
+<!-- Tarjeta de reservacion de home -->
 <div class="row my-2 mis-reservas rounded-3 py-4">
     <div class="col-4 fecha text-center">
         <h1>{{fecha}}</h1>
