--- a/src/app/pages/user/user-app/user-app.component.html
+++ b/src/app/pages/user/user-app/user-app.component.html
@@ -1,6 +1,9 @@
 <nz-content>
+  <!-- Header de aplicacion -->
   <app-header>
     <h1 class="display-3 fw-bold">{{ titulo }}</h1>
   </app-header>
+
+  <!-- Router pagina -->
   <router-outlet></router-outlet>
 </nz-content>
