--- a/src/app/pages/user/reservar-menu/reservar-menu.component.html
+++ b/src/app/pages/user/reservar-menu/reservar-menu.component.html
@@ -18,7 +18,7 @@
         <div class="row justify-content-between mt-3">
 
             <div class="col-6" *ngFor="let deporte of filteredDeportes" >
-                <!-- Deporte -->
+                <!-- Deporte Card -->
                 <a [routerLink]="['./', deporte.deporte_id]">
                     <app-card-deporte [name]='deporte.name' [imagen]="deporte.imagen"></app-card-deporte>
                 </a>
